fixed functionality issue
wasn't scaleable before and cards would overlap each other once hover upon

--- a/Frontend Compts/Moving cards on focus/css/style.css
+++ b/Frontend Compts/Moving cards on focus/css/style.css
@@ -15,33 +15,32 @@ body {
   line-height: 1;
   color: #777; }
 
+body {
+  background-color: #fff9db; }
+
 .section-cards {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 40rem;
-  width: 100rem;
-  background-color: #fff;
+  background-color: #fff9db;
   border-radius: 3rem;
   display: flex;
-  gap: 5rem; }
+  margin-left: 70rem; }
 
 .card {
   width: 30rem;
   height: inherit;
   border-radius: inherit;
-  box-shadow: 1rem 1rem 1.5rem -0.3rem rgba(0, 0, 0, 0.2);
-  transition: all .2s ease-in-out; }
-  .card-1 {
-    background-color: orange; }
-  .card-2 {
-    background-color: green;
-    transform: translateX(-10rem); }
-  .card-3 {
-    background-color: blue;
-    transform: translateX(-20rem); }
-  .card-1:hover {
+  box-shadow: -1rem -1rem 5rem -0.3rem rgba(0, 0, 0, 0.1), -1rem 0 2rem -1.5rem rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+  background-color: #fff;
+  backface-visibility: hidden;
+  z-index: -1; }
+  .card:not(:first-child) {
+    margin-left: -8rem; }
+  .card:hover {
     transform: translateY(-5rem); }
-  .card-1:hover ~ .card-2 {
-    transform: translateX(-5rem); }
+  .card:hover + .card {
+    transform: translateX(8rem); }
